<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_popularity"
                app:showAsAction="ifRoom"
                android:title="@string/sort_popularity"/>
            <item
                android:id="@+id/sort_comments"
                app:showAsAction="ifRoom"
                android:title="@string/sort_comments"/>
            <item
                android:id="@+id/sort_recent"
                app:showAsAction="ifRoom"
                android:title="@string/sort_recent"/>
            <item
                android:id="@+id/sort_views"
                app:showAsAction="ifRoom"
                android:title="@string/sort_views"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_timeframe"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@drawable/timeframe"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/timeframe_now"
                app:showAsAction="ifRoom"
                android:title="@string/timeframe_now"/>
            <item
                android:id="@+id/timeframe_week"
                app:showAsAction="ifRoom"
                android:title="@string/timeframe_week"/>
            <item
                android:id="@+id/timeframe_month"
                app:showAsAction="ifRoom"
                android:title="@string/timeframe_month"/>
            <item
                android:id="@+id/timeframe_year"
                app:showAsAction="ifRoom"
                android:title="@string/timeframe_year"/>
            <item
                android:id="@+id/timeframe_ever"
                app:showAsAction="ifRoom"
                android:title="@string/timeframe_ever"/>
        </menu>
    </item>
</menu>